namespace Po.VicTranslate.Client.Models;

public class TranslationResponse
{
    public string? TranslatedText { get; set; }
}
