erDiagram
    TranslationRequest {
        string Text
    }
    
    TranslationResponse {
        string TranslatedText
    }
    
    ApiSettings {
        string AzureOpenAIApiKey
        string AzureOpenAIEndpoint
        string AzureOpenAIDeploymentName
        string AzureSpeechSubscriptionKey
        string AzureSpeechRegion
    }
    
    DebugLogEntry {
        DateTime Timestamp
        string EventType
        string Component
        string Message
        string Level
        string DataJson
        string ExceptionDetails
        string SessionId
        string UserId
    }
    
    DebugSummaryReport {
        DateTime GeneratedAt
        TimeSpan ReportPeriod
        AppStateSnapshot AppState
        List EventSummaries
        List PerformanceMetrics
        List CriticalEvents
        Dictionary CustomMetrics
    }
    
    AppStateSnapshot {
        DateTime Timestamp
        string Version
        bool IsHealthy
        int ActiveConnections
        Dictionary ServiceStatus
        Dictionary ConfigurationSnapshot
        SystemResourceUsage ResourceUsage
    }
    
    SystemResourceUsage {
        double CpuUsagePercent
        long MemoryUsageMB
        long AvailableMemoryMB
        double DiskUsagePercent
        int ThreadCount
        int HandleCount
    }
    
    EventSummary {
        string EventType
        string Component
        int Count
        DateTime FirstOccurrence
        DateTime LastOccurrence
        string Level
        List SampleMessages
    }
    
    PerformanceMetric {
        string Name
        string Category
        double Value
        string Unit
        DateTime Timestamp
        Dictionary Tags
    }
    
    DiagnosticResult {
        string Service
        bool IsHealthy
        string Status
        string Details
        DateTime CheckedAt
    }
    
    BrowserLogRequest {
        string Type
        BrowserLogPayload Payload
    }
    
    BrowserLogPayload {
        string EventType
        string Message
        string Component
        string Level
        string Issue
        string Failure
        object Data
        object DiagnosticData
        object Context
        string SessionId
        string Timestamp
        string Url
    }
    
    %% Service Interfaces
    ITranslationService {
        string TranslateToVictorianEnglishAsync
    }
    
    ISpeechService {
        string SynthesizeSpeechAsync
    }
    
    ILyricsService {
        string GetAvailableSongsAsync
        string GetLyricsAsync
    }
    
    IDebugLogService {
        string LogInitializationAsync
        string LogEventAsync
        string LogInstabilityAsync
        string LogStructuralFailureAsync
        string GenerateSummaryReportAsync
        string GetRecentLogsAsync
        string CleanupOldLogsAsync
    }
    
    IDiagnosticService {
        string GetDiagnosticsAsync
    }
    
    %% Relationships
    TranslationRequest ||--|| TranslationResponse : "translates to"
    
    DebugSummaryReport ||--|| AppStateSnapshot : "contains"
    DebugSummaryReport ||--o{ EventSummary : "summarizes"
    DebugSummaryReport ||--o{ PerformanceMetric : "includes"
    DebugSummaryReport ||--o{ DebugLogEntry : "references"
    
    AppStateSnapshot ||--|| SystemResourceUsage : "monitors"
    
    BrowserLogRequest ||--|| BrowserLogPayload : "contains"
    
    ITranslationService ||--|| TranslationRequest : "processes"
    ITranslationService ||--|| TranslationResponse : "returns"
    
    IDebugLogService ||--o{ DebugLogEntry : "manages"
    IDebugLogService ||--|| DebugSummaryReport : "generates"
    
    IDiagnosticService ||--o{ DiagnosticResult : "produces"
